--- a/Tech/Shopper/app/src/main/res/layout/custom_alert_dialog_created_collab_post.xml
+++ b/Tech/Shopper/app/src/main/res/layout/custom_alert_dialog_created_collab_post.xml
@@ -20,6 +20,7 @@
             android:fontFamily="@font/open_sans_extrabold"
             android:gravity="center"
             android:textSize="30sp"
+            android:textColor="@color/colorMainColour"
             />
 
         <View
