--- a/Tech/Shopper/app/src/main/res/layout/activity_login.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:gravity="center_horizontal"
         android:text="Login"
         android:textAlignment="center"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@color/colorMainColour"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -116,21 +116,21 @@
             android:elevation="2dp"
             android:backgroundTint="@color/colorWhite"
             />
+
         <TextView
             android:id="@+id/loginText"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:text="Login"
-            android:elevation="2dp"
-            android:textSize="20sp"
-            android:gravity="center"
-            android:layout_marginLeft="15dp"
             android:layout_alignLeft="@+id/loginImage"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="15dp"
+            android:elevation="2dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center"
+            android:text="Login"
             android:textColor="@color/colorWhite"
-            android:textStyle="bold"
-            />
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
 
