--- a/Tech/Shopper/app/src/main/res/layout/custom_alert_dialog_collab_request.xml
+++ b/Tech/Shopper/app/src/main/res/layout/custom_alert_dialog_collab_request.xml
@@ -60,6 +60,7 @@
 
                 <!-- Post Description -->
                 <TextView
+                    android:id="@+id/custom_alert_dialog_request_description_TV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Looking for..."
@@ -79,6 +80,7 @@
 
 
                     <TextView
+                        android:id="@+id/custom_alert_dialog_request_tags_TV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Sports"/>
@@ -98,6 +100,7 @@
 
 
                     <TextView
+                        android:id="@+id/custom_alert_dialog_request_date_TV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="dd/mm/yyyy"/>
@@ -117,6 +120,7 @@
 
 
                     <TextView
+                        android:id="@+id/custom_alert_dialog_request_time_TV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="hh:mm aa"/>
