--- a/Tech/Shopper/app/src/main/res/menu/menu_nav.xml
+++ b/Tech/Shopper/app/src/main/res/menu/menu_nav.xml
@@ -8,6 +8,10 @@
         android:title="Profile"
         android:icon="@drawable/ic_profile_black"
         />
+    <item android:id="@+id/nav_notification"
+        android:title="Notifications"
+        android:icon="@drawable/ic_notification"
+        />
     <item android:id="@+id/nav_users"
         android:title="Users"
         android:icon="@drawable/ic_users_black"
